--- a/client/manual.html
+++ b/client/manual.html
@@ -34,7 +34,7 @@
 
 *Максимальный размер зашифрованного всеми публичными ключами получателей сообщения для его отправки на сервер — 500 килобайт; при превышении этого размера сообщение не отправляется и пользователю показывается уведомление. При составе группы 10 человек и отправке сообщения всем участникам максимальный размер сообщения, зашифрованного для одного участника — 50 килобайт, что соответствует примерно 10 тысячам знаков исходного сообщения.
 
-===== Установка
+===== Установка (рекомендуемый вариант)
 
 *После распаковки zip-архива с дистрибутивом мессенджера или скачивания его непосредственно из репозитория вы увидите две папки: client и server. В папке server находятся два файла (index.php и keys.php), которые администратору сервера нужно будет разместить на сервере; в папке client находятся файлы (в том числе и настоящее руководство manual.html), которые на сервере размещать не требуется; каждому участнику группы необходимо лишь  сохранить их у себя на безопасном носителе (флеш-накопителе, секретном разделе диска и т. п.) для использования в дальнейшем.
 
@@ -72,6 +72,24 @@
 
 &bull; для работы мессенджера файлы keygen.html (генерирование ключей) и manual.html (настоящее руководство) не требуются; их можно хранить отдельно.
 
+===== Установка (традиционный вариант)
+
+*Если вы твердо уверены, что никто посторонний никогда не получит доступ к серверу и не сможет подменить файлы, отдаваемые на клиентскую сторону, можно установить мессенджер в традиционном варианте. Это безопаснее для пользователей (не нужно хранить никаких файлов), но допустимо только в случае полной уверенности в надежности сервера. Кроме того, при таком варианте установки клиентам не нужно будет самим редактировать файл lib.js, указывая там адрес сервера и соль.
+
+Минус этого варианта состоит в том, что любой желающий (а не только член группы), знающий адрес сервера, сможет увидеть используемую для шифрования соль, что несколько уменьшает криптографическую стойкость зашифрованных сообщений.
+
+*Для установки мессенджера в традиционном варианте:
+
+&bull; переименуйте серверный файл index.php в, например, api.php;
+
+&bull; в клиентском файле lib.js укажите адрес сервера вместе с именем файла api.php (например, http://abcd.org/api.php) и придуманную вами соль;
+
+&bull; переименуйте клиентский файл s-tell.html в index.html;
+
+&bull; разместите и клиентские, и серверные файлы в одной и той же папке сервера.
+
+При таком варианте установки клиентам не требуется скачивать и хранить у себя никаких файлов; для работы с мессенджером им нужно будет просто набрать в адресной строке браузера адрес сервера. Для предварительного генерирования ключей пользователю необходимо будет ввести URL вида http://abcd.org/keygen.html.
+
 ===== Регистрация пользователей
 
 *Регистрация пользователей производится администратором сервера. Пользователь, желающий быть зарегистрированным, сообщает администратору сервера свой открытый ключ и ник (для сведения). Пересылка открытого ключа и ника должна производиться по альтернативному защищенному каналу связи (например, надежной электронной почте).
@@ -82,7 +100,7 @@
 
 ===== Использование
 
-*Запустите браузером файл s-tell.html. В появившемся окне введите свой приватный ключ (введенный приватный ключ по сети не передается, используется для генерирования открытого ключа, подписывания отправляемых и расшифровки получаемых сообщений).
+*Запустите браузером файл s-tell.html (если мессенджер установлен в традиционном варианте, просто введите в адресной строке браузера адрес сервера). В появившемся окне введите свой приватный ключ (введенный приватный ключ по сети не передается, используется для генерирования открытого ключа, подписывания отправляемых и расшифровки получаемых сообщений).
 
 *Дождитесь авторизации на сервере (для предотвращения перебора ключей на сервере установлена задержка 2 секунды). После авторизации вы увидите основное окно мессенджера:
 
@@ -112,15 +130,17 @@
 
 Если адрес используемого сервера неизвестен нежелательным лицам и вы твердо уверены, что среди участников группы нет внедренных агентов — средства анонимизации можно не использовать. Естественно, необходимо отключить сохранение истории в браузере.
 
-*Подойдите ответственно к хранению файлов клиентской части мессенджера на своем устройстве: при обнаружении этих файлов факт использования вами мессенджера будет раскрыт. Минимальный вариант — хранить файлы в архиве с паролем (придумайте внешне безобидное имя файла архива) и распаковывать его каждый раз перед использованием мессенджера; недостаток этого способа в том, что удаленные после использования мессенджера файлы достаточно легко обнаруживаются специализированными средствами.
+*В случае, если мессенджер установлен в рекомендуемом (на в традиционном) варианте — подойдите ответственно к хранению файлов клиентской части мессенджера на своем устройстве: при обнаружении этих файлов факт использования вами мессенджера будет раскрыт. Минимальный вариант — хранить файлы в архиве с паролем (придумайте внешне безобидное имя файла архива) и распаковывать его каждый раз перед использованием мессенджера; недостаток этого способа в том, что удаленные после использования мессенджера файлы достаточно легко обнаруживаются специализированными средствами.
 
 Более правильный способ — хранение файлов клиентской части на внешнем носителе (флешке), замаскированном под бытовой предмет или надежно спрятанном, либо на секретном разделе жесткого диска вашего компьютера (вопросы создания такого секретного раздела, факт существования которого не обнаруживается при исследовании жесткого диска, выходят за рамки настоящего руководства).
 
-*С осторожностью относитесь к предложениям «обновления» или иной замены файлов клиентской части мессенджера. Скачивать эти файлы допустимо только из нашего репозитория или с нашего официального сайта (адреса указаны в верхней части файлов s-tell.html и lib.js). Помните о методах социальной инженерии, цель которых — побудить вас подменить файлы клиентской части другими, содержащими закладки.
+*С осторожностью относитесь к предложениям «обновления» или иной замены файлов клиентской части мессенджера. Скачивать эти файлы допустимо только из нашего репозитория или с нашего официального сайта (адреса указаны в верхней части файлов s-tell.html и lib.js). Помните о методах социальной инженерии, цель которых — побудить вас подменить файлы клиентской части другими, содержащими закладки. Этот пункт не касается, конечно, случая, когда мессенджер установлен в традиционном варианте.
 
 *При захвате постронними лицами контроля над сервером расшифровки сообщений не произойдет (ключи для расшифровки — только у участников), однако серверная часть мессенджера может быть подменена с целью раскрытия вашего IP-адреса и времени отправки вами постов. Об этой опасности всегда следует помнить, что является еще одним доводом в пользу средств анонимизации.
 
-Рекомендуется записать в серверный файл keys.php «лишние» фиктивные публичные ключи несуществующих пользователей, чтобы затруднить посторонним лицам определение численного состава группы в случае захвата этими лицами контроля над сервером.
+Если мессенджер установлен в традиционном, а не в рекомендуемом варианте, захват посторонними контроля над сервером фатален: клиентские файлы будут подменены и произойдет полная расшифровка всех сообщений. Именно поэтому традиционный вариант установки следует использовать лишь при полной уверенности в надежности сервера.
+
+*Рекомендуется записать в серверный файл keys.php «лишние» фиктивные публичные ключи несуществующих пользователей, чтобы затруднить посторонним лицам определение численного состава группы в случае захвата этими лицами контроля над сервером.
 
 *Внимательно следует отнестись также к хранению приватного ключа. Приватный ключ — это символьная строка длиной менее 50 байт, и хранить ее можно в любом текстовом файле, не обнаруживаемом очевидным образом.
 
